stylesheets/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html,
body {
    -webkit-font-smoothing: antialiased;
    max-width: 100%;
    font-family: Graphik,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
    height: 100%;
}

.page-header {
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-repeat: no-repeat;
}

.jumbotron {
    background-color: unset;
}

.page-header-full {
    height: 100vh;
    margin-bottom: 2rem;
}

.jumbotron-smaller {
    height: 16em;
}

@media (min-width: 576px) {
    .jumbotron-smaller {
        height: 20em;
    }
}

.navbar-trans {
    background: #000000A7;
}

.navbar-trans .navbar-nav .nav-link:focus,.navbar-trans .navbar-nav .nav-link:hover {
    color: #FFD34E !important;
}

.img-home {
    background-image: linear-gradient( rgba(0,0,0,.28), rgba(0,0,0,.28) ), url('../img/home.jpg');
}

.img-about {
    background-image: linear-gradient( rgba(0,0,0,.28), rgba(0,0,0,.28) ),url('../img/about.jpg');
}

.img-services {
    background-image: linear-gradient( rgba(0,0,0,.28), rgba(0,0,0,.28) ), url('../img/services.jpg');
}

.img-how-we-work {
    background-image: linear-gradient( rgba(0,0,0,.28), rgba(0,0,0,.28) ), url('../img/how_we_work.jpg');
}

.img-contact {
    background-image: linear-gradient( rgba(0,0,0,.28), rgba(0,0,0,.28) ), url('../img/contact.jpg');
}

.img-blog {
    background-image: linear-gradient( rgba(0,0,0,.28), rgba(0,0,0,.28) ), url('../img/blog.jpg');
}

.footer-section {
    background-color: rgba(0, 0, 0, 0.9);
    color: rgba(255, 255, 255, 0.8);
}

.footer-section-links {
    list-style-type: none;
}

.footer-section-links > li > a {
    text-decoration: none;
    color: rgba(255, 255, 255, 0.8);
    display: flex;
    justify-content: space-between;
    border-bottom: solid 1px rgba(255, 255, 255, 0.1);
}

.footer-section-links > li > a:hover {
    color: #FFD34E;
}

.footer-section-contact {
    list-style-type: none;
}

.site-footer {
    background-color: #000;
    color: rgba(255, 255, 255, 0.8);
}

.site-footer-social > a {
    display: inline-block;
    text-decoration: none;
    color: gray;
    margin: 0.2em;
}

ul.list-with-icon {
    list-style-type: none;
}

.container-fluid {
    padding-left: 0px;
    padding-right: 0px;
}


ul.news {
    list-style-type: none;
}

ul.news > li {
    display: inline-block;
}

ul.news > li > h6 > a {
    text-decoration: none;
}

.news-date {
    font-style: italic;
}


ul.small-list-with-icon {
    list-style-type: none;
}

ul.small-list-with-icon > li > i {
    display: inline-block;
    margin: 0.2em;
}

ul.small-list-with-icon > li > a {
    text-decoration: none;
    color: unset;
}

.ccs-logo-container {
    width: 7em;
    /*background-color: white;*/
}

.ccs-logo {
    height: 5em;
    width: 5em;
    margin: 1em;
    /*
    background-color: white;
    background-size: contain;
    background-repeat: no-repeat;
    background-image: url('../img/CCS-supplier-logo-blue.png');
    background-position: center;
    */
}

